fix: Fixed spacing between the items in the skills section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -114,6 +114,7 @@ li a:hover {
   text-align: center;
   display: inline-block;
   padding: 5px 10px;
+  margin: 2% 2%;
   border-radius: 20px;
   font-size: 1vw;
 }
@@ -126,7 +127,7 @@ li a:hover {
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: auto;
 
-  margin-top: 20vh;
+  margin-top: 25vh;
   background-color: black;
   box-shadow: inset 0 0 0 2px red;
 }
